[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/2D/game_logo.png" type="Texture" id=1]
[ext_resource path="res://Assets/Font/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/StartGameScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/SoundFX/ui_select_sound.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="StartGameScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameLogo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -139.0
margin_top = 80.0
margin_right = 139.0
margin_bottom = 348.0
texture = ExtResource( 1 )

[node name="GameTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -105.0
margin_top = 400.0
margin_right = 105.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sadabahar"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.9999
margin_top = -40.0
margin_right = 91.0
margin_bottom = 110.0
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="VBoxContainer"]
margin_right = 181.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="LoadGame" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 181.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Load"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 181.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="GameVersion" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -146.0
margin_top = -62.9999
margin_right = -39.9999
margin_bottom = -40.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Version 1.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
